<resources>
    <string name="app_name">Gmusicapi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mateus Junior</string>
    <string name="nav_header_subtitle">d3coding@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="act_icon_refresh_log">Log</string>
    <string name="act_icon_search">Search</string>
    <string name="act_icon_filter">Filter</string>
    <string name="action_recreate">Recreate</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh_db">Refresh DB</string>
    <string name="action_clean_db">Clean DB</string>
    <string name="action_download_list">Download list</string>


    <string name="download">Download</string>
    <string name="remove">Remove</string>

    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="check_box_android_id">Use different Android ID</string>
    <string name="check_box_pass">Show password</string>
    <string name="login_hint_android_id">Android ID</string>

    <string name="login_button_login">Login</string>
    <string name="logging">logging in</string>

    <string name="menu_all">All</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="preferences_user">preferences_user</string>
    <string name="tag2tag">tag2tag</string>
    <string name="tag3tag">tag3tag</string>
    <string name="tag4tag">tag4tag</string>
    <string name="tag5tag">tag5tag</string>
    <string name="tag6tag">tag6tag</string>

    <string name="nav_all">Home</string>
    <string name="nav_download">Download</string>
    <string name="nav_offline">Offline</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_s_main">Main</string>
    <string name="nav_s_other">Other</string>
    <string name="nav_log">Log</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_info">Info</string>

    <string name="radio_title">Title</string>
    <string name="radio_artist">Artist</string>
    <string name="radio_album">Album</string>
    <string name="radio_genre">Genre</string>


    <string name="radio_all">All</string>
    <string name="radio_online">Online</string>
    <string name="radio_offline">Offline</string>

    <string name="tab_music">Music</string>
    <string name="tab_artist">Artist</string>
    <string name="tab_album">Album</string>
    <string name="tab_genre">Genre</string>

    <string name="login_alert_fill_in">Please fill in all fields!</string>
    <string name="login_alert_error">Wrong username, password or android id!</string>

    <string name="opt_st_downloading">Downloading&#8230;</string>
    <string name="opt_st_no_internet">No internet connection!</string>

    <string name="ask_logout">Logout?</string>
    <string name="ask_exit">Leave?</string>

    <string name="box_exit">exit</string>
    <string name="box_confirm">confirm</string>

    <string name="token">token</string>
    <string name="last_update">last_update</string>

    <string name="act_login">Login</string>
    <string name="act_info">Info</string>

    <string name="item_title">title</string>
    <string name="item_artist">artist</string>
    <string name="item_separator">-</string>
    <string name="item_album">album</string>
    <string name="item_duration">duration</string>
    <string name="item_status">status</string>

    <string name="database_version">database_version</string>

    <string name="null_description">Not implemented!</string>
    <string name="filter_by">Filter By:</string>
    <string name="organize_by">Organize by:</string>

    <string-array name="organize_by">
        <item>Title</item>
        <item>Artist</item>
        <item>Album</item>
        <item>Genre</item>
        <item>Date</item>
    </string-array>

    <string-array name="filter_by">
        <item>All</item>
        <item>Online</item>
        <item>Offline</item>
    </string-array>

</resources>
